--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.13",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
