--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
+    "connect-mongodb-session": "^2.4.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
+    "nodemailer": "^6.6.1",
     "slugify": "^1.5.3"
   },
   "devDependencies": {
