--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.0",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.1",
     "slugify": "^1.5.3"
