--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.1",
     "slugify": "^1.5.3"
