--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Education Portal",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "education",
